crates/alder-parse/src/item/snapshots/alder_parse__item__impl___tests__error_arg_end.snap
---
source: crates/alder-parse/src/item/impl_.rs
description: "impl Show[User User] {}"
---
ArgEnd(
    ExpectedEnd {
        opening: Position {
            line: 1,
            column: 10,
        },
        boundary: Position {
            line: 1,
            column: 15,
        },
        unexpected: Position {
            line: 1,
            column: 16,
        },
    },
)
