crates/alder-parse/src/item/snapshots/alder_parse__item__impl___tests__error_args_empty.snap
---
source: crates/alder-parse/src/item/impl_.rs
description: "impl Show[] {}"
---
Arg(
    Start(
        1,
        11,
    ),
    1,
    11,
)
