crates/alder-parse/src/item/snapshots/alder_parse__item__impl___tests__error_assoc_body.snap
---
source: crates/alder-parse/src/item/impl_.rs
description: "impl Iterator[Foo] { type Item = 1 }"
---
AssocBody(
    Start(
        1,
        34,
    ),
    1,
    34,
)
