crates/alder-parse/src/item/snapshots/alder_parse__item__impl___tests__error_assoc_no_type.snap
---
source: crates/alder-parse/src/item/impl_.rs
description: "impl Iterator[Foo] { type Item }"
---
AssocEquals(
    1,
    32,
)
