crates/alder-parse/src/item/snapshots/alder_parse__item__impl___tests__error_assoc_type_name.snap
---
source: crates/alder-parse/src/item/impl_.rs
description: "impl Iterator[Foo] { type item = Number }"
---
AssocType(
    1,
    27,
)
