crates/alder-parse/src/item/snapshots/alder_parse__item__impl___tests__error_bad_item.snap
---
source: crates/alder-parse/src/item/impl_.rs
description: "impl Show[User] { let x = 1 }"
---
Item(
    1,
    19,
)
