crates/alder-parse/src/item/snapshots/alder_parse__item__impl___tests__error_body_open.snap
---
source: crates/alder-parse/src/item/impl_.rs
description: "impl Show[User] fn"
---
BodyOpen(
    1,
    17,
)
