crates/alder-parse/src/item/snapshots/alder_parse__item__impl___tests__error_fn.snap
---
source: crates/alder-parse/src/item/impl_.rs
description: "impl Show[User] { fn show(user: User) String { let } }"
---
Fn(
    Body(
        Stmt(
            Let(
                Pattern(
                    Start(
                        1,
                        52,
                    ),
                    1,
                    52,
                ),
                1,
                48,
            ),
            1,
            48,
        ),
        1,
        46,
    ),
    1,
    19,
)
