crates/alder-parse/src/item/snapshots/alder_parse__item__impl___tests__error_no_args.snap
---
source: crates/alder-parse/src/item/impl_.rs
description: "impl Show {"
---
Open(
    1,
    11,
)
