crates/alder-parse/src/item/snapshots/alder_parse__item__impl___tests__error_same_line_after_assoc_type.snap
---
source: crates/alder-parse/src/item/impl_.rs
description: "impl Iterator[Foo] { type Item = Number fn next() {} }"
---
SameLine(
    1,
    41,
)
